# neo_bank

./: SETUP.md  pyproject.toml  test_deniz.txt
airflow/: Dockerfile  docker-compose.yaml  prod_names.txt
airflow/dags/: dbt_ingest_dag_test.py  dbt_staging_dag_test.py  dbt_vault_dag_test.py  generate_syntetic_data_dag.py  ingest_dag_prod.py  staging_dag_test.py  test_gcs_connection_dag.py  test_hello_dag.py
airflow/dbt/: profiles_example.yml
airflow/scripts/: synthetic_data_generator.py  synthetic_data_generator_users_only.py
dbt/dbt_neobank/: dbt_project.yml
dbt/dbt_neobank/.github/workflows/: .dbt-ci.yml
dbt/dbt_neobank/docs/: vault_tech_proposal.md
dbt/dbt_neobank/macros/: custom_ref.sql  notification_satellite_template.sql  record_source.sql  transaction_satellite_template.sql  user_satellite_template.sql
dbt/dbt_neobank/models/source/: sources_test.yml
dbt/dbt_neobank/models/staging/: sources.yml  staging.yml  stg_devices.sql  stg_notifications.sql  stg_transactions.sql  stg_users.sql
dbt/dbt_neobank/models/staging_test/: staging_test.yml  stg_devices_test.sql  stg_notifications_test.sql  stg_transactions_test.sql  stg_users_test.sql
dbt/dbt_neobank/models/vault/: schema.yml
dbt/neo_bank_dbt/: dbt_project.yml
dbt/neo_bank_dbt/models/staging/: schema.yml  stg_devices.sql  stg_notifications.sql  stg_transactions.sql  stg_users.sql
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id
notebooks/part_1_data_exploration/: exploration.ipynb
part_1-data_exploration/: exploration.ipynb
scripts/: config.py
(+49 files in other folders)
