[tool.poetry]
name = "02-Upload"
version = "0.1.0"
description = ""
readme = "README.md"
packages = [{ include = "scripts" }]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
google-cloud-storage = "^2.19.0"
jupyter = "^1.1.1"
pandas = ">=1.1.3,<2.2"
pyarrow = "^20.0.0"
great-expectations = "0.18.21"
ipykernel = "^6.29.5"

[tool.poetry.group.dev.dependencies]
requests-mock = "^1.12.1"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
